tests/snapshots/raw__examples_in_informal_reference-49.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"virtual\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 7,
        },
    ],
)
