tests/snapshots/raw__examples_in_informal_reference-51.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"try\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 3,
        },
    ],
)
