tests/snapshots/raw__examples_in_informal_reference-58.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"\\u{000B}\")"
---
Ok(
    [
        Token {
            class: whitespace,
            length: 1,
        },
    ],
)
