tests/snapshots/raw__examples_in_informal_reference-59.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"\\u{000C}\")"
---
Ok(
    [
        Token {
            class: whitespace,
            length: 1,
        },
    ],
)
