tests/snapshots/raw__examples_in_informal_reference-6.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"else\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 4,
        },
    ],
)
